tests/baselines/reference/objectTypeWithDuplicateNumericProperty.errors.txt
objectTypeWithDuplicateNumericProperty.ts(6,5): error TS2300: Duplicate identifier '1.0'.
objectTypeWithDuplicateNumericProperty.ts(7,5): error TS2300: Duplicate identifier '1.'.
objectTypeWithDuplicateNumericProperty.ts(8,5): error TS2300: Duplicate identifier '1.00'.
objectTypeWithDuplicateNumericProperty.ts(12,5): error TS2300: Duplicate identifier '1'.
objectTypeWithDuplicateNumericProperty.ts(13,5): error TS2300: Duplicate identifier '1'.
objectTypeWithDuplicateNumericProperty.ts(14,5): error TS2300: Duplicate identifier '1'.
objectTypeWithDuplicateNumericProperty.ts(15,5): error TS2300: Duplicate identifier '1'.
objectTypeWithDuplicateNumericProperty.ts(19,5): error TS2300: Duplicate identifier '1'.
objectTypeWithDuplicateNumericProperty.ts(20,5): error TS2300: Duplicate identifier '1'.
objectTypeWithDuplicateNumericProperty.ts(21,5): error TS2300: Duplicate identifier '1'.
objectTypeWithDuplicateNumericProperty.ts(22,5): error TS2300: Duplicate identifier '1'.
objectTypeWithDuplicateNumericProperty.ts(27,5): error TS1117: An object literal cannot have multiple properties with the same name.
objectTypeWithDuplicateNumericProperty.ts(28,5): error TS1117: An object literal cannot have multiple properties with the same name.
objectTypeWithDuplicateNumericProperty.ts(29,5): error TS1117: An object literal cannot have multiple properties with the same name.


==== objectTypeWithDuplicateNumericProperty.ts (14 errors) ====
    // numeric properties must be distinct after a ToNumber operation
    // so the below are all errors
    
    class C {
        1;
        1.0;
        ~~~
!!! error TS2300: Duplicate identifier '1.0'.
        1.;
        ~~
!!! error TS2300: Duplicate identifier '1.'.
        1.00;
        ~~~~
!!! error TS2300: Duplicate identifier '1.00'.
    }
    
    interface I {
        1;
        ~
!!! error TS2300: Duplicate identifier '1'.
        1.0;
        ~~~
!!! error TS2300: Duplicate identifier '1'.
        1.;
        ~~
!!! error TS2300: Duplicate identifier '1'.
        1.00;
        ~~~~
!!! error TS2300: Duplicate identifier '1'.
    }
    
    var a: {
        1;
        ~
!!! error TS2300: Duplicate identifier '1'.
        1.0;
        ~~~
!!! error TS2300: Duplicate identifier '1'.
        1.;
        ~~
!!! error TS2300: Duplicate identifier '1'.
        1.00;
        ~~~~
!!! error TS2300: Duplicate identifier '1'.
    }
    
    var b = {
        1: 1,
        1.0: 1,
        ~~~
!!! error TS1117: An object literal cannot have multiple properties with the same name.
        1.: 1,
        ~~
!!! error TS1117: An object literal cannot have multiple properties with the same name.
        1.00: 1
        ~~~~
!!! error TS1117: An object literal cannot have multiple properties with the same name.
    }
    
    